[package]
name        = "basilisk"
version     = "0.1.0"
authors     = ["Matthias Kandora <noreply@nimrod.xyz>"]
edition     = "2018"
license     = "Creative Commons Attribution 4.0"
description = "autonomous AI written in rust"
repository  = "https://github.com/felsweg/libasilisk"
readme      = "README.md"
keywords    = ["ai", "unsupervised", "learning", "transformer", "replication"]

[dependencies]
