[package]
name        = "basilisk"
version     = "0.1.0"
authors     = ["Matthias Kandora <noreply@nimrod.xyz>"]
edition     = "2018"
license     = "GPL-3.0-only"
description = "autonomous AI written in rust"
repository  = "https://github.com/felsweg/libasilisk"
readme      = "README.md"
keywords    = ["ai", "unsupervised", "learning", "transformer", "replication"]

[dependencies]
